--- a/elements/route-socket/route-socket.html
+++ b/elements/route-socket/route-socket.html
@@ -22,6 +22,9 @@
         on: function() {
           socket.on.apply(socket, arguments);
         },
+        send: function() {
+          socket.send.apply(socket, arguments);
+        },
         emit: function() {
           socket.emit.apply(socket, arguments);
         },
