--- a/elements/route-ui-lockscreen/route-ui-lockscreen.html
+++ b/elements/route-ui-lockscreen/route-ui-lockscreen.html
@@ -35,7 +35,7 @@
       <polymer-flex-layout></polymer-flex-layout>
       <div flex></div>
       <route-skycon icon="{{forecastIcon}}"></route-skycon>
-      <div id="temp">{{temperature}}&deg;</div>
+      <div id="temp">{{temperatureString}}&deg;</div>
       <div flex></div>
     </div>
   </template>
@@ -43,10 +43,13 @@
     Polymer('route-ui-lockscreen', {
       hours: "12",
       minutes: "00",
-      temperature: "?",
+      temperatureString: "00",
       attached: function() {
         this.setTime();
         this.resize();
+      },
+      temperatureChanged: function(oldTemp, newTemp) {
+        this.temperatureString = Math.round(newTemp);
       },
       sunChanged: function(event, details, sender) {
         switch(details) {
