--- a/elements/route-ui-bar/route-ui-bar.html
+++ b/elements/route-ui-bar/route-ui-bar.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="route-ui-bar.css">
     <route-state name="Forecast.currently.apparentTemperature" value="{{temperature}}"></route-state>
     <route-state name="Forecast.currently.icon" value="{{forecastIcon}}"></route-state>
+    <route-state name="artworkColors" value="{{colors}}"></route-state>
 
     <div id="content">
       <polymer-flex-layout></polymer-flex-layout>
@@ -25,9 +26,18 @@
       hours: "12",
       minutes: "00",
       temperatureString: "00",
+      colors: null,
       enteredView: function() {
         this.setTime();
         this.invalidate();
+      },
+      colorsChanged: function(oldColors, newColors) {
+        if(newColors.vibrant) {
+          this.style.backgroundColor = newColors.vibrant.hex;
+        } else {
+          this.style.backgroundColor = newColors.dark.hex;
+        }
+
       },
       temperatureChanged: function(oldValue, newValue) {
         this.temperatureString = Math.round(newValue);
