--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Route Controller</title>
 
   <meta name="apple-mobile-web-app-capable" content="yes" />
