Switched to hammer.js; removed console.logs

--- a/src/elements/route-ui-power/route-ui-power.html
+++ b/src/elements/route-ui-power/route-ui-power.html
@@ -23,7 +23,7 @@
 
     <route-power-manager id="powerManager"></route-power-manager>
 
-    <route-ui-tile id="tile" on-route-ui-tile-center="{{centerHandler}}">
+    <route-ui-tile id="tile" on-route-ui-tile-tap="{{centerHandler}}">
 
       <div style="height: 100%">
         <polymer-flex-layout vertical></polymer-flex-layout>
