--- a/src/elements/route-ui-speech/route-ui-speech.html
+++ b/src/elements/route-ui-speech/route-ui-speech.html
@@ -20,7 +20,7 @@
   <template>
     <link rel="stylesheet" href="route-ui-speech.css">
 
-    <route-ui-tile id="tile" on-route-ui-tile-center="{{centerHandler}}">
+    <route-ui-tile id="tile" on-route-ui-tile-tap="{{centerHandler}}">
 
       <div style="height: 100%">
         <polymer-flex-layout vertical></polymer-flex-layout>
