--- a/src/elements/route-ui-media/route-ui-media.html
+++ b/src/elements/route-ui-media/route-ui-media.html
@@ -22,10 +22,9 @@
     <link rel="stylesheet" href="route-ui-media.css">
 
     <route-state name="Sonos.Main.trackInfo" on-state-change="{{trackChanged}}"></route-state>
-    <!-- <polymer-image-search id="imageSearch" query="{{query}}" on-load="{{loadHandler}}"></polymer-image-search> -->
 
-    <route-ui-tile id="tile" on-route-ui-tile-left="{{nextTrack}}" on-route-ui-tile-right="{{prevTrack}}"
-        on-route-ui-tile-center="{{playPause}}">
+    <route-ui-tile id="tile" on-route-ui-tile-swipeleft="{{nextTrack}}" on-route-ui-tile-swiperight="{{prevTrack}}"
+        on-route-ui-tile-tap="{{playPause}}">
       <div class="album-name">{{name}}</div>
       <div id="artwork">
         <img id="albumart" on-load="{{imgLoaded}}" />
@@ -37,8 +36,6 @@
     Polymer('route-ui-media', {
       trackChanged: function(event, details, sender) {
         this.name = details.name;
-        // this.query = details.artist + " " + details.album + " album art";
-        console.log("TRACKINFO", details);
         this.$.albumart.src = details.artwork;
       },
       playPause: function() {
@@ -54,31 +51,6 @@
         var img = this.$.albumart;
         img.style.height = "auto";
         img.style.width = "auto";
-        var dim = this.offsetWidth - 8;
-        if(img.width > img.height) {
-          var width = (dim * img.width / img.height),
-              offset = -Math.floor((width - dim) / 2);
-
-          img.style.position = "relative";
-          img.style.height = dim + "px";
-          img.style.width = "auto";
-          img.style.left = offset + "px";
-        } else {
-          var height = (dim * img.height / img.width),
-              offset = -Math.floor((height - dim) / 2);
-
-          img.style.position = "relative";
-          img.style.width = dim + "px";
-          img.style.height = "auto";
-          img.style.top = offset + "px";
-        }
-      },
-      loadHandler: function(error, img, sender) {
-        while(this.$.artwork.hasChildNodes()) {
-          this.$.artwork.removeChild(this.$.artwork.lastChild);
-        }
-        this.$.artwork.appendChild(img);
-
         var dim = this.offsetWidth - 8;
         if(img.width > img.height) {
           var width = (dim * img.width / img.height),
