Switched power manager to pointer events

--- a/src/elements/route-power-manager/route-power-manager.html
+++ b/src/elements/route-power-manager/route-power-manager.html
@@ -36,12 +36,9 @@
       var events, state;
 
       events = [
-        "mousedown",
-        "mousemove",
-        "mouseup",
-        "touchstart",
-        "touchmove",
-        "touchend",
+        "pointerstart",
+        "pointerend",
+        "pointermove",
       ];
       state = "awake";
 
