--- a/src/elements/route-ui-lockscreen/route-ui-lockscreen.html
+++ b/src/elements/route-ui-lockscreen/route-ui-lockscreen.html
@@ -17,7 +17,7 @@
 <link rel="import" href="../route-socket/route-socket.html">
 <link rel="import" href="../route-skycon/route-skycon.html">
 
-<polymer-element name="route-ui-lockscreen" attributes="">
+<polymer-element name="route-ui-lockscreen" attributes="" touch-action="none">
   <template>
     <link rel="stylesheet" href="route-ui-lockscreen.css">
 
