Using correct pointer events to wake display

--- a/src/elements/route-power-manager/route-power-manager.html
+++ b/src/elements/route-power-manager/route-power-manager.html
@@ -36,8 +36,8 @@
       var events, state;
 
       events = [
-        "pointerstart",
-        "pointerend",
+        "pointerdown",
+        "pointerup",
         "pointermove",
       ];
       state = "awake";
